@@ -1,33 +1,0 @@
-<table cellpadding="0" cellspacing="0" border="0" width="100%" summary=""
- tal:define="shield options/shield|python:1;
-             enable_esi options/enable_esi|nothing;
-             boxedit options/boxedit|nothing;
-             context_obj nocall:options/context_obj;
-             template nocall:options/template|nothing;
-             maxcols python: context['maxcols']"
- tal:condition="maxcols"
- tal:attributes="summary python: context['title'];
-                 class python: context.getCSSClass(level=2);
-                 style python: context.getCSSLayoutStyle()">
-  <tr>
-    <tal:block define="objects python: context.getObjects()"
-               repeat="x_pos python: range(int(maxcols))">
-      <tal:block
-       define="objects_in_xpos python: objects.get(x_pos, None)">
-        <td valign="top"
-         tal:define="contents_in_xpos python: objects_in_xpos['contents'];
-                     cellsize python: objects_in_xpos['cellsizer']"
-         tal:attributes="style python: cellsize and 'width:%s' % cellsize.cellwidth or None">
-          <tal:block repeat="content contents_in_xpos">
-            <div tal:define="rendered python: content.render_cache(shield=shield, context_obj=context_obj, enable_esi=enable_esi, boxedit=boxedit, template=template)"
-                 tal:attributes="style string:text-align:${content/align};;padding:${content/margin}">
-              <div tal:attributes="class python: content.getCSSClass(level=2);
-                                   style python: content.getCSSLayoutStyle()"
-               tal:content="structure rendered" />
-            </div>
-          </tal:block>
-        </td>
-      </tal:block>
-    </tal:block>
-  </tr>
-</table>
